--- a/src/app.html
+++ b/src/app.html
@@ -3,10 +3,12 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<meta content="Verzeichnis für Boulderübungen." name="name" />
+		<link rel="icon" href="favicon.ico" />
+		<link rel="manifest" href="manifest.webmanifest" />
 		<meta name="color-scheme" content="dark light" />
 		<meta name="theme-color" content="#ffffff" media="(prefers-color-scheme: light)" />
 		<meta name="theme-color" content="#121212" media="(prefers-color-scheme: dark)" />
+		<meta content="Verzeichnis für Boulderübungen." name="description" />
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
